# Axiom-AI

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: param.yaml
data/knowledge_base/: ict-book.md  lesson_velocity.md
docs/: Project Planning.md  Roadmap.md  TECHNICAL_DOCUMENTATION.md  Tutor_AI_SRS_v2.docx  Tutor_AI_SRS_v2.md
docs/code-explanations/: CodeExplanation.md  README.md  phase1-redis-message-queue.md
docs/code-explanations/src/infrastructure/: observability.py.md
docs/code-explanations/src/infrastructure/llm/: embeddings.py.md  llm_provider.py.md
scripts/: ingest_one.py  ingest_to_qdrant.py  smoke_test.py  test_queue.py  test_redis.py
src/infrastructure/: config.py
src/infrastructure/db/: qdrant_client.py
src/infrastructure/llm/: embeddings.py  llm_provider.py
src/services/ingest_service/: __init__.py  chunkers.py  pipeline.py
src/services/messaging/: __init__.py  queue.py  schemas.py
tests/: conftest.py
